@@ -1,6 +1,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% -*- Mode: latex -*- %%%%%%%%%%%%%%%%%%%%%%%%%%
 %%
-%% Copyright (c) 1991-2003 Francois Felix Ingrand.
+%% Copyright (c) 1991-2014 Francois Felix Ingrand.
 %% All rights reserved.
 %%
 %% Redistribution and use in source and binary forms, with or without
@@ -139,9 +139,9 @@ documentation at hand and still want to now the name or type of a particular
 widget.
 
 \item[\code{-peo}] (which stands for Print English Operator) can be used to
-print the temporal operator in english instead of the single letter. It will
-print \code{achieve} instead of \samp{!}, and \code{wait} instead of \samp{\^{}}
-and so on.
+parse and print the temporal operator in english instead of the single letter. It will
+parse and print \code{achieve} instead of \samp{!}, and \code{wait} instead of \samp{\^{}}
+and so on. The parser understands both syntaxes, but the printer will output the english form.
 
 \item[\code{-l upper|lower|none}] can be used to print and parse all the symbol
 and id in upper case, lower case or in no particular case.
