@@ -1,6 +1,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -*- Mode: Latex -*- %%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% oprs-kernel.tex -- 
-%% Copyright (c) 1991-2012 Francois Felix Ingrand.
+%% Copyright (c) 1991-2014 Francois Felix Ingrand.
 %% All rights reserved.
 %%
 %% Redistribution and use in source and binary forms, with or without
@@ -230,8 +230,8 @@ evaluable predicates hash-tables (default size: 128).
 \item[\code{-F}] to specify the size of the function/action hash-table
 (default size: 64).
 
-\item[\code{-p}] can be used to print the temporal operator in English
-instead of the single letter. It will print \code{achieve} instead of \samp{!},
+\item[\code{-p}] can be used to parse and print the temporal operator in English
+instead of the single letter. It will parse and print \code{achieve} instead of \samp{!},
 and \code{wait} instead of \samp{\^{}} and so on.
 
 \item[\code{-l upper|lower|none}] can be used to print and parse all the symbol
