@@ -1,6 +1,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% -*- Mode: latex -*- %%%%%%%%%%%%%%%%%%%%%%%%%%
 %%
-%% Copyright (c) 1991-2011 Francois Felix Ingrand.
+%% Copyright (c) 1991-2014 Francois Felix Ingrand.
 %% All rights reserved.
 %%
 %% Redistribution and use in source and binary forms, with or without
@@ -119,10 +119,12 @@ the outputs produced by the kernel and appearing in the text window.
 documentation at hand and still want to now the name or type of a particular
 widget.
 
-\item[\code{-peo}] can be used to print the temporal operator in English
-instead of the single letter. It will print \code{achieve} instead of \samp{!},
-and \code{wait} instead of \samp{\^{}} and so on. This is equivalent to the
-\code{-p} argument of the \CPK{}.
+
+\item[\code{-peo}] (which stands for Print English Operator) can be used to
+parse and print the temporal operator in english instead of the single letter. It will
+parse and print \code{achieve} instead of \samp{!}, and \code{wait} instead of \samp{\^{}}
+and so on. The parser understands both syntaxes, but the printer will output the english form.
+This is equivalent to the \code{-p} argument of the \CPK{}.
 
 \end{description}
 
