@@ -1,3 +1,8 @@
+2014-10-09  Felix Ingrand  <felix@precise>
+
+	* oprs-type.c (init_id_hash): output temporal operator in english
+	if the -p or -peo (for X programs) are passed as arguments.
+
 2014-10-09  Francois Felix Ingrand  <felix@ingrand.net>
 
 	* lex-exp.l.part (T): reinstall the code to parse temporal operator long form.
